# lucky-cli

./: .gitignore  Cargo.toml  README.md  commands.py
config/: global.json
file/: info.py
myjson/: commands.py
src/: config.rs  main.rs  network.rs  service.rs  system.rs  template.rs
text/: commands.py
