[package]
name = "lucky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
local-ip-address = "0.6.1"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sysinfo = "0.30.8"
tokio = { version = "1", features = ["full"] }
sysproxy = {git = "https://github.com/zzzgydi/sysproxy-rs.git", branch = "main"}
open = "5.1.2"
anyhow = "1.0.82"
